fixed white space and made links into new tabs

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,8 +75,9 @@ p,h3 {
 }
 .home {
   background-image: url(https://i.imgur.com/wsBA66V.jpg);
-  /* background-attachment:fixed; */
+  background-attachment:fixed;
   min-height:200vh;
+  color: white;
 }
 #sounds {
   background-image: url(https://i.imgur.com/G2JA2ux.jpg);
@@ -113,4 +114,8 @@ min-height:200vh;
 .sign {
   background-color: rgb(32,141,178);
   color: white;
+}
+
+.headerText {
+  margin:0;
 }
